--- a/samples/workbench/spark/python-spark.ipynb
+++ b/samples/workbench/spark/python-spark.ipynb
@@ -381,6 +381,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "4031bba4-de4d-47b4-94cf-42623a502227",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the \"SparkSession\" with the following config.\n",
+    "VER = \"0.26.0\"\n",
+    "FILE_NAME = f\"spark-bigquery-with-dependencies_2.12-{VER}.jar\"\n",
+    "connector = f\"gs://spark-lib/bigquery/{FILE_NAME}\"\n",
+    "\n",
+    "spark = (\n",
+    "    SparkSession.builder.appName(\"spark-bigquery-polyglot-language-demo\")\n",
+    "    .config(\"spark.jars\", connector)\n",
+    "    .config(\"spark.sql.debug.maxToStringFields\", \"500\")\n",
+    "    .getOrCreate()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "895d11d3-04e6-4806-b74b-2d8cc977d44e",
    "metadata": {},
@@ -504,45 +524,6 @@
     }
    ],
    "source": [
-    "# Saving the data to BigQuery\n",
-    "word_count.write.format('bigquery') \\\n",
-    "  .option('table', 'wordcount_dataset.wordcount_output') \\\n",
-    "  .save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90a991ec-a22e-4682-884f-1e1762a4350f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!/usr/bin/python\n",
-    "\"\"\"BigQuery I/O PySpark example.\"\"\"\n",
-    "from pyspark.sql import SparkSession\n",
-    "\n",
-    "spark = SparkSession \\\n",
-    "  .builder \\\n",
-    "  .appName('spark-bigquery-demo') \\\n",
-    "  .getOrCreate()\n",
-    "\n",
-    "# Use the Cloud Storage bucket for temporary BigQuery export data used\n",
-    "# by the connector.\n",
-    "bucket = \"[your-bucket-name]\"\n",
-    "spark.conf.set('temporaryGcsBucket', bucket)\n",
-    "\n",
-    "# Load data from BigQuery.\n",
-    "words = spark.read.format('bigquery') \\\n",
-    "  .option('table', 'bigquery-public-data:samples.shakespeare') \\\n",
-    "  .load()\n",
-    "words.createOrReplaceTempView('words')\n",
-    "\n",
-    "# Perform word count.\n",
-    "word_count = spark.sql(\n",
-    "    'SELECT word, SUM(word_count) AS word_count FROM words GROUP BY word')\n",
-    "word_count.show()\n",
-    "word_count.printSchema()\n",
-    "\n",
     "# Saving the data to BigQuery\n",
     "word_count.write.format('bigquery') \\\n",
     "  .option('table', 'wordcount_dataset.wordcount_output') \\\n",
